# PclMapping

./: CMakeLists.txt  PclMapping.cpp  README.md  readme.md  trajectory.txt
Img/depth/: 000000.pfm  000001.pfm  000002.pfm  000003.pfm  000004.pfm  000005.pfm  000006.pfm  000007.pfm  000008.pfm  000009.pfm  000010.pfm  000011.pfm  000012.pfm  000013.pfm  000014.pfm  000015.pfm  000016.pfm  000017.pfm  000018.pfm  000019.pfm  000020.pfm  000021.pfm  000022.pfm  000023.pfm  000024.pfm  000025.pfm  000026.pfm  000027.pfm  000028.pfm  000029.pfm  000030.pfm  000031.pfm  000032.pfm  000033.pfm  000034.pfm  000035.pfm  000036.pfm  000037.pfm  000038.pfm  000039.pfm  (+60 more)
depth/: 000000.pfm  000001.pfm  000002.pfm  000003.pfm  000004.pfm  000005.pfm  000006.pfm  000007.pfm  000008.pfm  000009.pfm  000010.pfm  000011.pfm  000012.pfm  000013.pfm  000014.pfm  000015.pfm  000016.pfm  000017.pfm  000018.pfm  000019.pfm  000020.pfm  000021.pfm  000022.pfm  000023.pfm  000024.pfm  000025.pfm  000026.pfm  000027.pfm  000028.pfm  000029.pfm  000030.pfm  000031.pfm  000032.pfm  000033.pfm  000034.pfm  000035.pfm  000036.pfm  000037.pfm  000038.pfm  000039.pfm  (+60 more)
